<resources>
    <string name="app_name">MyRestaurantGallery</string>
    <string name="app_name_for_display">Restaurant Gallery</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading…</string>
    <string name="find">Find</string>
    <string name="location_myself">Write location by yourself</string>
    <string name="permission_ask">Please allow to get permissions for better using this app.</string>

    <!--for login-->
    <string name="login_welcome">Welcome to My Restaurant Gallery!</string>
    <string name="login_explain">Please log in with your Google account for using this app.</string>
    <string name="logout">logout</string>
    <string name="withdrawal">withdrawal</string>
    <string name="google_auth_failure">google authentication failure!</string>
    <string name="withdrawal_ask">Are you sure to want withdrawal? All of your data will be removed.</string>
    <string name="login_success">login is completed</string>
    <string name="logout_success">logout is completed</string>
    <string name="withdrawal_success">withdrawal is completed</string>

    <!--examples-->
    <string name="example_name">name</string>
    <string name="example_genre">genre</string>
    <string name="example_location">location</string>
    <string name="example_memo">Write the memo if you want :)</string>
    <string name="example_addr">address</string>

    <!--dialogs-->
    <string name="title_message">image setting</string>
    <string name="gallery_message">choose a picture from gallery</string>
    <string name="default_message">use default image</string>
    <string name="delete_message">Do you want to delete?</string>

    <string name="network_error">Please check your network status</string>
    <string name="delete_complete">Delete complete</string>
    <string name="save_complete">Save complete</string>
    <string name="edit_complete">Edit complete</string>
    <string name="error_happened">error!!</string>

    <!--etc-->
    <string name="satisfy_warning">Entering the restaurant name and location is mandatory!</string>
    <string name="add_new_item">Add new item</string>
    <string name="search_location">location searching</string>
    <string name="current_location">set current location</string>

    <!--image description-->
    <string name="current_gps_pictogram_description">current gps pictogram</string>
    <string name="back_pictogram_description">back pictogram</string>
    <string name="search_pictogram_description">search pictogram</string>
    <string name="calendar_pictogram_description">calendar pictogram</string>
    <string name="item_image_description">Each Image about the restaurant</string>
    <string name="rating_star_description">rating star symbol for each item</string>

    <!--firebase auth value-->
    <string name="firebase_client_id" translatable="false">63887686662-hfn4f5plrhv914v7tmhhekg81qgj0ooi.apps.googleusercontent.com</string>

</resources>