<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="@drawable/dialog_border">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/title_message"
        android:textColor="@color/regularText"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/gallery_message"
        android:textColor="@color/regularText"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/tv_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/default_message"
        android:textColor="@color/regularText"
        android:textSize="16sp"/>
</LinearLayout>