<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="150dp"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:weightSum="7">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:maxWidth="160dp"
            android:maxHeight="130dp"
            android:padding="10dp"
            android:background="@drawable/grid_border"
            android:src="@drawable/search"/>


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/panel_border1"
        android:layout_marginTop= "2dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/example_name"
        android:textAlignment="center"
        android:textColor="@color/regularText"/>

    <LinearLayout
        android:id="@+id/ll_contents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@drawable/panel_border2"
        android:layout_marginBottom = "2dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/example_location"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/example_genre"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"/>
    </LinearLayout>


</LinearLayout>