<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="info"
            type="com.fallTurtle.myrestaurantgallery.model.room.Info" />

        <variable
            name="spinnerEntries"
            type="String[]" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.AddActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/ll_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:menu="@menu/add_activity_menu"
            app:titleTextAppearance="@style/toolbarText" />

        <LinearLayout
            android:id="@+id/ll_date"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:weightSum="5"
            android:orientation="horizontal"
            android:background="@drawable/date_sign"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/ll_image"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="@id/toolbar"
            app:layout_constraintWidth_percent="0.68"
            app:layout_constraintHeight_percent="0.06">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@{info.date}"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#000000"/>

            <ImageView
                android:id="@+id/iv_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:src="@drawable/calendar"
                android:contentDescription="@string/calendar_pictogram_description"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/grid_border"
            app:layout_constraintTop_toBottomOf="@id/ll_date"
            app:layout_constraintBottom_toTopOf="@id/rb_ratingBar"
            app:layout_constraintStart_toStartOf="@id/ll_date"
            app:layout_constraintEnd_toEndOf="@id/ll_date"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.28">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/korean_food"
                android:contentDescription="@string/item_image_description"
                app:imagePath="@{info.image}"
                app:categoryNum="@{info.categoryNum}"/>

        </LinearLayout>

        <RatingBar
            android:id="@+id/rb_ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:numStars="5"
            android:rating="@{info.rate}"
            android:stepSize="1"
            app:layout_constraintTop_toBottomOf="@id/ll_image"
            app:layout_constraintBottom_toTopOf="@id/et_name"
            app:layout_constraintStart_toStartOf="@id/ll_image"
            app:layout_constraintEnd_toEndOf="@id/ll_image"
            app:layout_constraintHeight_percent="0.06"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@{info.name}"
            android:maxLines="1"
            android:hint="@string/example_name"
            android:autofillHints="@string/example_name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/rb_ratingBar"
            app:layout_constraintBottom_toTopOf="@id/sp_category"
            app:layout_constraintStart_toStartOf="@id/rb_ratingBar"
            app:layout_constraintEnd_toEndOf="@id/rb_ratingBar"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.06"/>

        <Spinner
            android:id="@+id/sp_category"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:spinnerMode="dialog"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            app:layout_constraintBottom_toTopOf="@id/ll_location"
            app:layout_constraintStart_toStartOf="@id/et_name"
            app:layout_constraintEnd_toEndOf="@id/et_name"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.06"
            tools:entries="@{spinnerEntries}" />

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:weightSum="5"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/sp_category"
            app:layout_constraintBottom_toTopOf="@id/et_memo"
            app:layout_constraintStart_toStartOf="@id/sp_category"
            app:layout_constraintEnd_toEndOf="@id/sp_category"
            app:layout_constraintWidth_percent="1"
            app:layout_constraintHeight_percent="0.06">

            <EditText
                android:id="@+id/et_location"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@{info.location}"
                android:maxLines="1"
                android:hint="@string/location_myself"
                android:autofillHints="text"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_map"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="20dp"
                android:padding="2dp"
                android:text="@string/find"
                android:textColor="#000000"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_memo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/example_memo"
            android:background="@drawable/edit_text_border"
            android:gravity="start"
            android:hint="@string/example_memo"
            android:inputType="text"
            android:padding="10dp"
            android:text="@{info.memo}"
            app:layout_constraintTop_toBottomOf="@id/ll_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/ll_location"
            app:layout_constraintEnd_toEndOf="@id/ll_location"
            app:layout_constraintHeight_percent="0.28"
            app:layout_constraintWidth_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>